	  circumstances.  (#13298)

	XMPP:
	* Fix building on platforms with an older glib (inadvertantly broken in
	  2.7.10).  (#13329)
	* Don't treat the on-join status storms as 'new arrivals'.  (Thijs
	  Alkemade) (#a14527)
	* Extend the /join command to support room JIDs, enabling you to join
	  a room on any server.  (Solarius, Matěj Cepl, wyuka) (#4526)

version 2.7.10 (02/06/2011):
	General:
	* Force video sources to all have the same capabilities.  This reduces the
	  number of times video must be scaled down, saving CPU time. (Jakub Adam)
	  (half of #13095)
	* Starting multiple video calls and ending one no longer causes the other
	  calls to stop sending audio and video. (Jakub Adam) (#12758, #13237)
	* Perl bindings now respect LDFLAGS. (Peter Volkov, Markos Chandras)
	  (#12638)
	* Added AddTrust External Root CA.  (#11554)
	* Resolve some issues validating X.509 certificates signed off the CAcert
	  Class 3 intermediate cert when using the GnuTLS SSL/TLS plugin.

	Gadu-Gadu:
	* Don't drop whole messages when text is colored. (Jan Zachorowski)
	  (#13259)

	Groupwise:
	* Don't show two windows when using "Get Info" on a buddy. (Gabriel Burt;
	  Novell, Inc.) (#13108)

	IRC:
	* Don't send ISON messages longer than 512 bytes. (Jeffrey Honig) (#9692)

	libpurple:
	* Stop sending audio when placing a call on hold. (Jakub Adam) (#13032)
	* Stop translating gpointers to ints in the dbus API.  This removes
	  functions from the dbus API.  (The openSUSE Project) (#12507)
	* Fix D-Bus introspection calls that omit the interface parameter.  (Tom
	  Samstag) (#13073)
	* Fixed bugs in purple_str_to_time() that caused the most recent 'make
	  check' failures.  (Nader Morshed) (#13131)
	* Correct an issue that caused some UIs other than Pidgin or Finch to
	  leave a buddy in the "is typing" state.  (Jan Kaluza)
	* Fix potential information disclosure issues in the Cipher code.  (Julia
	  Lawall)

	Pidgin: